# sozvon-transcripio

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  run.bat  setup.bat  test.bat
audio/: audio_router.py  capture_base.py  devices.py  loopback_capture.py  microphone_capture.py  types.py
config/: settings.py
core/: atomic_write.py  cuda_runtime.py  paths.py  runtime.py
gui/: main_window.py  settings_dialog.py  status.py
scripts/: run.bat  run.ps1  setup.bat  setup.ps1  smoke_calibration.py  smoke_gui.py  test.bat  test.ps1
speech/: audio_window.py  diarization.py  hardware_detector.py  mock_engine.py  model_manager.py  transcription_worker.py  types.py  whisper_engine.py
storage/: session_paths.py  transcript_store.py
tests/: test_audio_devices.py  test_audio_router.py  test_audio_window.py  test_hardware_model_selection.py  test_loopback_capture.py  test_main_window_status.py  test_model_manager.py  test_runtime.py  test_session_paths.py  test_settings.py  test_transcript_store.py  test_transcription_worker.py  test_whisper_engine.py
